- FileInfo: The option '-v' now also does a semantic validation of MzML files.
- FileMerger: Improved interface
- ConsensusID: Now also supports consensus identification of features and consensus features.

New features and improvements of TOPPView:
- Added functionality for editing feature data

Changes to OpenMS XML formats:
- ParamXML:
  - Restrictions in Param .ini files are represented by 'min:max' instead
    of 'min-max' now, to avoid issues with small (1e-06) and negative numbers.
  - Replaced 'advanced' attribute by the more general 'tags' attribute.
  - Added support for float, int and string lists
- featureXML:
  - Added tag <subordinate> to store competing features that did not qualify for the final map
  - Removed <description> section
  - Added document Id
  - Added protein and peptide information
- consensusXML:
	- Added document Id
	- Added protein and peptide information

Changes to the contrib package:
- Updated SeqAn package to revision 2666 (this fixes the STL debug error)

Detailed list of changes to specific OpenMS classes:
- Renamed and moved classes
  - Renamed MSMetaDataExplorer to MetaDataBrowser
  - Renamed ProcessingMethod to DataProcessing
- Removed classes
  - DPeakArray (moved the functionality to the classes that inherited from it)
  - IDSpectrumMapper (replaced by IDMapper)
  - IDFeatureMapper (replaced by IDMapper)
  - FeatureXMLHandler (merged into FeatureXMLFile)
  - ConsensusXMLHandler (merged into ConsensusXMLFile)
  - PeakPicker (merged into PeakPickerCWT)
- New classes
  - DATASTRUCTURES/IntList
  - DATASTRUCTURES/StringList
  - ANALYSIS/ID/IDMapper
	- ANALYSIS/MAPMATCHING/MapAlignmentAlgorithmApplyGivenTrafo
	- ANALYSIS/MAPMATCHING/MapAlignmentAlgorithmSpectrumAlignment
- Changes to classes
	- DataProcessing: Now contains Software and can handle multiple processing actions.
	- Software: Only contains name and version now.
	- SourceFile: Added MetaInfointerface and checksum type
	- ContactPerson: Added URL and address