@@ -102,11 +102,11 @@ namespace OpenMS
 			String path;
 			if (open_tags_.size()!=0 && open_tags_.front()=="indexedmzML")
 			{
-				path.implode(open_tags_.begin()+1, open_tags_.end()-remove_from_end,"/");
+				path.concatenate(open_tags_.begin()+1, open_tags_.end()-remove_from_end,"/");
 			}
 			else
 			{
-				path.implode(open_tags_.begin(), open_tags_.end()-remove_from_end,"/");
+				path.concatenate(open_tags_.begin(), open_tags_.end()-remove_from_end,"/");
 			}
 			path = String("/") + path;
 			return path;
